# pamac

./: .configure-custom.sh  .gitignore  AUTHORS  CMakeLists.txt  Makefile  README.md  autogen.sh  meson.build  meson.extra  meson_options.txt  pamac.avprj
autovala/: configure-custom.sh
autovala/cmake/: InstallSymlink.cmake
data/: CMakeLists.txt  org.pamac.aur.gschema.xml  org.pamac.aur.gschema.xml.in  org.pamac.main.gschema.xml  pamac-tray-appindicator.desktop  pamac-tray.desktop  pamac.installer.gresource.xml  pamac.manager.gresource.xml  pamac.manager_no_aur.gresource.xml  pamac.transaction.gresource.xml  pamac.transaction_no_aur.gresource.xml
data/config/: CMakeLists.txt  pamac.conf
data/config/noaur/: CMakeLists.txt  pamac.conf
data/dbus/: CMakeLists.txt  org.pamac.system.conf  org.pamac.system.service  org.pamac.user.service
data/icons/16x16/apps/: CMakeLists.txt
data/icons/24x24/status/: CMakeLists.txt
data/icons/32x32/apps/: CMakeLists.txt
data/interface/: CMakeLists.txt  manager_window.ui  manager_window_no_aur.ui  preferences_dialog.ui  preferences_dialog_no_aur.ui
data/mime/: CMakeLists.txt
data/pixmaps/: CMakeLists.txt
data/polkit/: CMakeLists.txt  org.pamac.policy  org.pamac.policy.in
data/schemas/: CMakeLists.txt  org.pamac.aur.gschema.xml  org.pamac.main.gschema.xml
data/systemd/: CMakeLists.txt  pamac-system.service
doc/: CMakeLists.txt
meson_scripts/: install_library.sh
po/: CMakeLists.txt  LINGUAS  Makefile  POTFILES.in  af.po  ar.po  ast.po  az_AZ.po  be.po  bg.po  bn.po  bs.po  bs_BA.po  ca.po  ca_ES.po  create_pot_file.sh  cs.po  cs_CZ.po  cy.po  da.po  de.po  de_CH.po  de_DE.po  el.po  el_GR.po  en_GB.po  eo.po  es.po  es_419.po  es_AR.po  es_ES.po  es_MX.po  es_SV.po  et.po  eu.po  fa.po  fa_IR.po  fi.po  files_to_translate  fo.po  (+51 more)
resources/: preferences_dialog.ui
src/: CMakeLists.txt  Config.vala.base  Pamac.pc  PamacUserDaemon.deps  PamacUserDaemon.pc  alpm_config.vala  choose_ignorepkgs_dialog.vala  choose_provider_dialog.vala  common.vala  manager_window.vala  meson.build  mirrors_config.vala  package.vala  pamac_config.vala  pamacclassic.deps  pamacclassic.pc  preferences_dialog.vala  progress_box.vala  system_daemon.vala  transaction.vala  transaction_sum_dialog.vala  user_daemon.vala
src/aur/: AUR.deps  AUR.pc  CMakeLists.txt  Config.vala.base  aur.vala  meson.build
src/pamac-clean-cache/: CMakeLists.txt  clean_cache.vala  meson.build
src/pamac-install/: CMakeDepends.txt  CMakeLists.txt  installer.vala  meson.build  progress_dialog.vala
src/pamac-manager/: CMakeDepends.txt  CMakeLists.txt  history_dialog.vala  manager.vala  manager_window.vala  meson.build
src/pamac-system-daemon/: CMakeDepends.txt  CMakeLists.txt  meson.build  mirrors_config.vala  pamac_config.vala  system_daemon.vala
src/pamac-tray/: CMakeDepends.txt  CMakeLists.txt  meson.build  pamac_config.vala  tray-appindicator.vala  tray-gtk.vala  tray.vala  user_daemon.vala
src/pamac-user-daemon/: CMakeDepends.txt  CMakeLists.txt  alpm_config.vala  meson.build  user_daemon.vala
